--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "ipykernel>=7.1.0",
     "matplotlib>=3.10.8",
     "numpy>=2.4.1",
     "pandas>=3.0.0",
     "polars>=1.37.1",
+    "pyarrow>=23.0.0",
     "seaborn>=0.13.2",
+    "statsmodels>=0.14.6",
 ]
